publish: add test question HackerOne
generated from commit 43d537d35681dcb18542212e2cb1192a35e50d37

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='https:eeliang.github.io/python-help'>Eeliang's Python help</a></li>
+            <li><a href='https://eeliang.github.io/python-help'>Eeliang's Python help</a></li>
             <li><a href='https://www.hackerrank.com/contests/crescent-practice-3rd-years/challenges/islands-1'>Try x test questions at HackerOne</a></li>
         </ul>
     </div>
