--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
       </ul>
         <ul class="toc-footer">
             <li><a href='https://eeliang.github.io/python-help'>Eeliang's Python help</a></li>
-            <li><a href='https://www.hackerrank.com/contests/crescent-practice-3rd-years/challenges/islands-1'>Try x test questions at HackerOne</a></li>
+            <li><a href='https://www.hackerrank.com/challenges/sql-projects/problem?isFullScreen=false'>Try test questions at HackerOne</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
